fixed bug with menu displaying behind title on chrome

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -20,6 +20,7 @@ body {
     width: 1170px;
     position: fixed;
     top: 0;
+    z-index: 10;
 }
 
 .navbar-inner {
